{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 300,
  "lineage": "641eef86-d693-6678-859f-01c7aff56b17",
  "resources": [
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:109749039095:internet-gateway/igw-07bdc6a321f06e62f",
            "id": "igw-07bdc6a321f06e62f",
            "owner_id": "109749039095",
            "tags": {
              "Name": "igw-dev"
            },
            "tags_all": {
              "Name": "igw-dev"
            },
            "vpc_id": "vpc-041f7726a1b4855c7"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:109749039095:route-table/rtb-07d935bbc7a79b33e",
            "id": "rtb-07d935bbc7a79b33e",
            "owner_id": "109749039095",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07bdc6a321f06e62f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rote-pub-dev"
            },
            "tags_all": {
              "Name": "rote-pub-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-041f7726a1b4855c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.igw_main",
            "module.aws_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-table-acc-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cfcbff38d1d90a3",
            "route_table_id": "rtb-07d935bbc7a79b33e",
            "subnet_id": "subnet-0b254d4e48acd4766"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.igw_main",
            "module.aws_vpc.aws_route_table.route-table-main",
            "module.aws_vpc.aws_subnet.subnet_pub_main",
            "module.aws_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_main_be",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:109749039095:security-group/sg-00e642a794588cd5b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e642a794588cd5b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4403,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4403
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "security-group-be-dev",
            "name_prefix": "",
            "owner_id": "109749039095",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-be-dev"
            },
            "tags_all": {
              "Name": "sg-be-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-041f7726a1b4855c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_main_fe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:109749039095:security-group/sg-0b7edb0608dd79705",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b7edb0608dd79705",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security-group-fe-dev",
            "name_prefix": "",
            "owner_id": "109749039095",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-fe-dev"
            },
            "tags_all": {
              "Name": "sg-fe-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-041f7726a1b4855c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_main_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:109749039095:security-group/sg-09477b11a1ad0a379",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09477b11a1ad0a379",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "security-group-rds-dev",
            "name_prefix": "",
            "owner_id": "109749039095",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-rds-dev"
            },
            "tags_all": {
              "Name": "sg-rds-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-041f7726a1b4855c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_priv_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:109749039095:subnet/subnet-0b53ae835ff75d84b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3a",
            "availability_zone_id": "apse3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b53ae835ff75d84b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "109749039095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-priv-dev"
            },
            "tags_all": {
              "Name": "subnet-priv-dev"
            },
            "vpc_id": "vpc-041f7726a1b4855c7"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_pub_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:109749039095:subnet/subnet-0b254d4e48acd4766",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3a",
            "availability_zone_id": "apse3-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b254d4e48acd4766",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "109749039095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-pub-dev"
            },
            "tags_all": {
              "Name": "subnet-pub-dev"
            },
            "vpc_id": "vpc-041f7726a1b4855c7"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zone_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:109749039095:subnet/subnet-0c3ba9052356205e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3a",
            "availability_zone_id": "apse3-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3ba9052356205e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "109749039095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rds-sub-zone1-dev"
            },
            "tags_all": {
              "Name": "rds-sub-zone1-dev"
            },
            "vpc_id": "vpc-041f7726a1b4855c7"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zone_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:109749039095:subnet/subnet-050483c8d07f7290b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3b",
            "availability_zone_id": "apse3-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050483c8d07f7290b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "109749039095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rds-sub-zone2-dev"
            },
            "tags_all": {
              "Name": "rds-sub-zone2-dev"
            },
            "vpc_id": "vpc-041f7726a1b4855c7"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:109749039095:vpc/vpc-041f7726a1b4855c7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-066333bba2e80cda0",
            "default_route_table_id": "rtb-0c64ea4e3253d212c",
            "default_security_group_id": "sg-01dce49163951e353",
            "dhcp_options_id": "dopt-09344e45275c310f1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-041f7726a1b4855c7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c64ea4e3253d212c",
            "owner_id": "109749039095",
            "tags": {
              "Name": "vpc-dev"
            },
            "tags_all": {
              "Name": "vpc-dev"
            }
          }
        }
      ]
    },
    {
      "module": "module.ec2-main[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "be-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02157887724ade8ba",
            "arn": "arn:aws:ec2:ap-southeast-3:109749039095:instance/i-010f4945389c01335",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-010f4945389c01335",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ae81171d9b5ac98f",
            "private_dns": "ip-10-0-1-146.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08fa3e8e09e4ff1b1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-00e642a794588cd5b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b53ae835ff75d84b",
            "tags": {
              "Name": "be-server-dev"
            },
            "tags_all": {
              "Name": "be-server-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00e642a794588cd5b"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "module.aws_vpc.aws_security_group.sg_main_be",
            "module.aws_vpc.aws_subnet.subnet_priv_main",
            "module.aws_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-main[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02157887724ade8ba",
            "arn": "arn:aws:ec2:ap-southeast-3:109749039095:instance/i-0e024cbd8f47a7884",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e024cbd8f47a7884",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0542f60b0b84d02ba",
            "private_dns": "ip-10-0-2-77.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.77",
            "public_ip": "43.218.80.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01ca825ed091f9274",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b7edb0608dd79705"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b254d4e48acd4766",
            "tags": {
              "Name": "web-server-dev"
            },
            "tags_all": {
              "Name": "web-server-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b7edb0608dd79705"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "module.aws_vpc.aws_security_group.sg_main_fe",
            "module.aws_vpc.aws_subnet.subnet_pub_main",
            "module.aws_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    }
  ]
}